tests/circuits/invalids/invalid_links_section_content_4.nts
.chipsets:
input   a
input   b
4071    or
output  s
.links:
:1     or:1
b:1     or:2
or:3    s:1